@@ -5,11 +5,11 @@ import com.simibubi.create.content.kinetics.deployer.ItemApplicationRecipeParams
 import com.simibubi.create.content.kinetics.deployer.DeployerApplicationRecipe;
 import com.simibubi.create.content.processing.recipe.ProcessingOutput;
 import net.minecraft.util.RandomSource;
-import net.minecraft.world.Container;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
 import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -26,20 +26,20 @@ public class BoostRecipe extends DeployerApplicationRecipe {
         return super.matches(inv, level) && !ItemBoostUtils.isBoosted(inv.getItem(0));
     }
 
+    @NotNull
     @Override
-    public List<ItemStack> rollResults(List<ProcessingOutput> rollableResults, RandomSource randomSource) {
+    public List<ItemStack> rollResults(List<ProcessingOutput> rollableResults, @NotNull RandomSource randomSource) {
         List<ItemStack> results = new ArrayList<>();
-
-        ItemStack stack = rollableResults.get(0).rollOutput(randomSource);
-        if (stack.isEmpty())
-            return results;
-
-        ItemBoostUtils.setBoosted(stack, true);
-        results.add(stack);
-
+        ProcessingOutput output = rollableResults.getFirst();
+        ItemStack stack = output.rollOutput(randomSource);
+        if (!stack.isEmpty()) {
+            ItemBoostUtils.setBoosted(stack, true);
+            results.add(stack);
+        }
         return results;
     }
 
+    @NotNull
     @Override
     public RecipeSerializer<?> getSerializer() {
         return SERIALIZER;
